test/functions/bradc/resolution/paramMismatch.chpl
proc foo(x: int(32)) {
  writeln("In foo!");
}

foo(10:int(64));
